--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "985d774f-2630-4b46-a7df-95e2a087f4c4"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
